; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/an/extr_if_an.c_an_alloc_memory.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/an/extr_if_an.c_an_alloc_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.an_softc = type { i32, i32, %struct.resource* }
%struct.resource = type { i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@RF_ACTIVE = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @an_alloc_memory(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.an_softc*, align 8
  %9 = alloca %struct.resource*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.an_softc* @device_get_softc(i32 %10)
  store %struct.an_softc* %11, %struct.an_softc** %8, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @SYS_RES_MEMORY, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* @RF_ACTIVE, align 4
  %16 = call %struct.resource* @bus_alloc_resource_anywhere(i32 %12, i32 %13, i32* %6, i32 %14, i32 %15)
  store %struct.resource* %16, %struct.resource** %9, align 8
  %17 = load %struct.resource*, %struct.resource** %9, align 8
  %18 = icmp ne %struct.resource* %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %3
  %20 = load i32, i32* %6, align 4
  %21 = load %struct.an_softc*, %struct.an_softc** %8, align 8
  %22 = getelementptr inbounds %struct.an_softc, %struct.an_softc* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  %23 = load %struct.resource*, %struct.resource** %9, align 8
  %24 = load %struct.an_softc*, %struct.an_softc** %8, align 8
  %25 = getelementptr inbounds %struct.an_softc, %struct.an_softc* %24, i32 0, i32 2
  store %struct.resource* %23, %struct.resource** %25, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load %struct.an_softc*, %struct.an_softc** %8, align 8
  %28 = getelementptr inbounds %struct.an_softc, %struct.an_softc* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  store i32 0, i32* %4, align 4
  br label %31

29:                                               ; preds = %3
  %30 = load i32, i32* @ENOENT, align 4
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %29, %19
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local %struct.an_softc* @device_get_softc(i32) #1

declare dso_local %struct.resource* @bus_alloc_resource_anywhere(i32, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
